--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,106 +1,151 @@
  @use "mixins";
-  @use "variables";
+ @use "variables";
+
+ .brand {
+   text-align: left;
+ }
+
+ .brand a {
+   font-size: 1.1rem;
+   font-weight: 500;
+   text-decoration: none;
+   color: #595959;
+ }
+
+ .brand h1 {
+   font-size: 1.2rem;
+   font-weight: 300;
+   margin: 2px 0 0;
+   color: #E84849;
+ }
 
 
 
+ .menu-toggle {
+   margin-left: auto;
 
-    .brand {
-      text-align: left;
-    }
+   width: 30px;
+   height: 32px;
 
-    .brand a {
-      font-size: 1.1rem;
-      font-weight: 500;
-      text-decoration: none;
-      color: #595959;
-    }
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
 
-    .brand h1 {
-      font-size: 1.2rem;
-      font-weight: 300;
-      margin: 2px 0 0;
-      color: #E84849;
-    }
+   gap: 6px;
+
+   background: transparent;
+   border: 0;
+   padding: 0;
+   cursor: pointer;
+
+   z-index: 1000;
+ }
+
+ .menu-toggle span {
+   display: block;
+   height: 3px;
+   width: 100%;
+   background: #595959;
+   border-radius: 2px;
+   transition: 0.3s ease;
+ }
+
+ .menu-toggle.active span:nth-child(1) {
+   transform: rotate(45deg) translate(6px, 6px);
+ }
+
+ .menu-toggle.active span:nth-child(2) {
+   opacity: 0;
+ }
+
+ .menu-toggle.active span:nth-child(3) {
+   transform: rotate(-45deg) translate(6px, -6px);
+ }
+
+ //////
+ .topnav {
+   display: flex;
+   align-items: center;
+   flex-wrap: wrap;
+   padding: 10px 15px 10px;
+ }
+
+ .topnav #myLinks {
+   width: 100%;
+   order: 2;
+   display: flex;
+   flex-direction: column;
+   gap: 8px;
+
+   overflow: hidden;
+   max-height: 0;
+   transform: translateX(-120%);
+   transition: transform 0.3s ease, max-height 0.3s ease;
+ }
+
+ .topnav #myLinks.active {
+   margin-top: 10px;
+   transform: translateX(0);
+   max-height: 300px;
+   font-size: 1.3rem;
+
+   a {
+     color: #000000;
+     text-decoration: none;
+   }
+
+   a:hover {
+     text-decoration: underline;
+   }
+
+ }
 
 
+ @media (min-width: 1200px) {
 
-    .menu-toggle {
-      margin-left: auto;
+   nav {
+     display: flex;
+     flex-direction: row;
+     justify-content: space-between;
+   }
 
-      width: 30px;
-      height: 32px;
+   .menu-toggle {
+     display: none;
+   }
 
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+   .topnav #myLinks {
+     display: flex;
+     flex-direction: row;
+     width: auto;
 
-      gap: 6px;
+     gap: 24px;
 
-      background: transparent;
-      border: 0;
-      padding: 0;
-      cursor: pointer;
+     max-height: none;
+     overflow: visible;
+     transform: none;
+     order: 0;
+   }
 
-      z-index: 1000;
-    }
 
-    .menu-toggle span {
-      display: block;
-      height: 3px;
-      width: 100%;
-      background: #595959;
-      border-radius: 2px;
-      transition: 0.3s ease;
-    }
+   .topnav a {
+     display: inline-flex;
+     align-items: center;
+     color: rgb(0, 0, 0);
+     text-decoration: none;
+     font-size: 1.8rem;
 
-    .menu-toggle.active span:nth-child(1) {
-      transform: rotate(45deg) translate(6px, 6px);
-    }
+   }
 
-    .menu-toggle.active span:nth-child(2) {
-      opacity: 0;
-    }
+   .brand h1 {
+     font-size: 2rem;
+     font-weight: 200;
+     margin: 0;
+     font-style: normal;
+   }
 
-    .menu-toggle.active span:nth-child(3) {
-      transform: rotate(-45deg) translate(6px, -6px);
-    }
-
-    //////
-    .topnav {
-      display: flex;
-      align-items: center;
-      flex-wrap: wrap;
-      padding: 10px 15px 10px;
-    }
-
-    .topnav #myLinks {
-      width: 100%;
-      order: 2;
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-
-      overflow: hidden;
-      max-height: 0;
-      transform: translateX(-120%);
-      transition: transform 0.3s ease, max-height 0.3s ease;
-    }
-
-    .topnav #myLinks.active {
-      margin-top: 10px;
-      transform: translateX(0);
-      max-height: 300px;
-      font-size: 1.3rem;
-
-      a {
-        color: #000000;
-        text-decoration: none;
-      }
-
-      a:hover {
-        text-decoration: underline;
-      }
-
-    }
-
+   .topnav a.projectsMenu {
+     color: #E84849;
+     gap: 5px;
+   }
+ }
